--- a/mysite/rental_system/templates/rental_system/index.html
+++ b/mysite/rental_system/templates/rental_system/index.html
@@ -1,3 +1,6 @@
+{% load static %}
+<link rel="icon" href="{% static "favicon.ico" %}" type="image/x-icon">
+
 <h1>Teokset</h1>
 {% if works %}
 <ul>
