--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -15,7 +15,7 @@
 
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	    <a class="navbar-brand" href="#">Rental System</a>
+	    <a class="navbar-brand" href="{% url 'index' %}">Rental System</a>
 	    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
 	        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="navbar-toggler-icon"></span>
@@ -23,7 +23,7 @@
 	    <div class="collapse navbar-collapse" id="navbarNav">
 	        <ul class="navbar-nav">
 	            <li class="nav-item active">
-	                <a class="nav-link" href="#">Works<span class="sr-only">(current)</span></a>
+	                <a class="nav-link" href="{% url 'index' %}">Works<span class="sr-only">(current)</span></a>
 	            </li>
 	            <li class="nav-item">
 	                <a class="nav-link" href="#">Rented Works</a>
