--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -29,12 +29,18 @@
 				</li>
 			</ul>
 			<ul class="navbar-nav ml-auto">
-				<li class="nav-item">
-					<a class="nav-link" href="#">Login</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Register</a>
-				</li>
+					{% if user.is_authenticated %}
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{{ user.username }}</a>
+						<div class="dropdown-menu">
+						  <a class="dropdown-item" href="/logout">Logout</a>
+						</div>
+					  </li>
+					{% else %}
+					<li class="nav-item"></li>
+						<a class="nav-link" href="{% url 'login' %}">Login</a>
+					</li>
+					{% endif %}
 			</ul>
 		</div>
 	</nav>
