--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -32,13 +32,13 @@
 					{% if user.is_authenticated %}
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{{ user.username }}</a>
-						<div class="dropdown-menu">
-						  <a class="dropdown-item" href="/logout">Logout</a>
+						<div class="dropdown-menu dropdown-menu-right">
+						  <a class="dropdown-item" href="/logout?next={{request.path}}">Logout</a>
 						</div>
 					  </li>
 					{% else %}
 					<li class="nav-item"></li>
-						<a class="nav-link" href="{% url 'login' %}">Login</a>
+						<a class="nav-link" href="{% url 'login' %}?next={{request.path}}">Login</a>
 					</li>
 					{% endif %}
 			</ul>
