--- a/mysite/rental_system/templates/registration/login.html
+++ b/mysite/rental_system/templates/registration/login.html
@@ -1,7 +1,9 @@
+{% extends "base.html" %}
+
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<form method="post">
+<form method="post" class='form-group'>
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Login</button>
