--- a/mysite/register/templates/register/register.html
+++ b/mysite/register/templates/register/register.html
@@ -3,12 +3,16 @@
 {% block title %}Luo uusi käyttäjä{% endblock %}
 
 {% block content %}
-    <link rel='stylesheet' type='text/css' href='style.css'>
-    <form method='POST' class='form-group'>
-        {% csrf_token %}
-        {{form}}
-        <button type='submit' class='btn btn-success'>Register</button>
-    </form>
-    <h1>ÄÄÄÄ</h1>
-    <!--CSS kesken-->
+<form method='POST' class='form-group'>
+    {% csrf_token %}
+    <table>
+        {{form.as_table}}
+        <tr>
+            <td>
+                <button type='submit' class='btn btn-success'>Register</button>
+            </td>
+        </tr>
+    </table>
+</form>
+<!--CSS kesken-->
 {% endblock %}
