--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -24,9 +24,11 @@
 				<li class="nav-item active">
 					<a class="nav-link" href="{% url 'index' %}">Works<span class="sr-only">(current)</span></a>
 				</li>
+				{% if user.is_authenticated %}
 				<li class="nav-item">
-					<a class="nav-link" href="#">Rented Works</a>
+					<a class="nav-link" href="{% url 'rented' %}">Rented Works</a>
 				</li>
+				{% endif %}
 			</ul>
 			<ul class="navbar-nav ml-auto">
 					{% if user.is_authenticated %}
