--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -13,36 +13,28 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<nav class="navbar navbar-expand navbar-dark bg-dark">
 		<a class="navbar-brand" href="{% url 'index' %}">Rental System</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
 			aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
-			<ul class="navbar-nav">
-				<li class="nav-item active">
-					<a class="nav-link" href="{% url 'index' %}">Works<span class="sr-only">(current)</span></a>
-				</li>
+			<ul class="navbar-nav ml-auto">
 				{% if user.is_authenticated %}
-				<li class="nav-item">
-					<a class="nav-link" href="{% url 'rented' %}">Rented Works</a>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
+						aria-haspopup="true" aria-expanded="false">{{ user.username }}</a>
+					<div class="dropdown-menu dropdown-menu-right">
+						<a class="dropdown-item" href="{% url 'rented' %}">Rented Works</a>
+						<a class="dropdown-item" href="/logout?next={{request.path}}">Logout</a>
+					</div>
+				</li>
+				{% else %}
+				<li class="nav-item"></li>
+				<a class="nav-link" href="{% url 'login' %}?next={{request.path}}">Login</a>
 				</li>
 				{% endif %}
-			</ul>
-			<ul class="navbar-nav ml-auto">
-					{% if user.is_authenticated %}
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{{ user.username }}</a>
-						<div class="dropdown-menu dropdown-menu-right">
-						  <a class="dropdown-item" href="/logout?next={{request.path}}">Logout</a>
-						</div>
-					  </li>
-					{% else %}
-					<li class="nav-item"></li>
-						<a class="nav-link" href="{% url 'login' %}?next={{request.path}}">Login</a>
-					</li>
-					{% endif %}
 			</ul>
 		</div>
 	</nav>
