responsiivinen pöytä 'ehkä'

--- a/mysite/rental_system/templates/rental_system/rented.html
+++ b/mysite/rental_system/templates/rental_system/rented.html
@@ -4,7 +4,7 @@
 {% if rented %}
 {% localtime on %}
 <div class="container">
-    <div class="table-responsive">
+    <div class="table-responsive-lg">
         <br>
         <h2>Your rented works!</h2>
         <br>
