Väliaikainen formien siistiminen

--- a/mysite/rental_system/templates/registration/login.html
+++ b/mysite/rental_system/templates/registration/login.html
@@ -1,11 +1,30 @@
-{% block title %}Login{% endblock %}
 {% block content %}
+<head>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <title>Rental System</title>
+    <style>
+        .container {
+          margin: auto;
+          width: 30%;
+          padding: 10px;
+          background-color: #EBDEDC ;
+        }
+        </style>
+</head>
+<div class ="container">
+    <h1>Log in</h1>
 <form method="post" class='form-group'>
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Login</button>
     <a href="/register">Create account</a>
 </form>
+</div>
 {% endblock %}
 </body>
 
