--- a/mysite/register/templates/register/register.html
+++ b/mysite/register/templates/register/register.html
@@ -1,8 +1,23 @@
-{% extends "base.html" %}
-
-{% block title %}Luo uusi käyttäjä{% endblock %}
-
 {% block content %}
+<head>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <title>Rental System</title>
+    <style>
+        .container {
+          margin: auto;
+          width: 50%;
+          padding: 10px;
+          background-color: #EBDEDC;
+        }
+        </style>
+</head>
+<div class ="container">
+<h1>Register a new account</h1>
 <form method='POST' class='form-group'>
     {% csrf_token %}
     <table>
@@ -14,5 +29,5 @@
         </tr>
     </table>
 </form>
-<!--CSS kesken-->
+</div>
 {% endblock %}
