--- a/mysite/rental_system/templates/registration/login.html
+++ b/mysite/rental_system/templates/registration/login.html
@@ -10,21 +10,41 @@
     <style>
         .container {
           margin: auto;
-          width: 30%;
+          margin-top: 200px;
+          text-align: center;
+          width: 20%;
           padding: 10px;
-          background-color: #EBDEDC ;
+          background-color: #F5EEED;
+          outline: 1px solid lightgray;
+        }
+
+        .footer {
+          margin: auto;
+          margin-top: 12px;
+	      text-align: center;
+          max-width: 20%;
+          padding: 10px;
+          background-color: #F5EEED;
+          outline: 1px solid lightgray;
         }
         </style>
 </head>
+
 <div class ="container">
-    <h1>Log in</h1>
-<form method="post" class='form-group'>
+    <h2>Log in</h2>
+<form method='POST' class='form-group'>
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Login</button>
-    <a href="/register">Create account</a>
+
+    <button type='submit' style='width: 100%' class='btn btn-success'>Login</button>
 </form>
 </div>
-{% endblock %}
-</body>
 
+<div class ="footer">
+  <h5>Don't have an account?</h5>
+  <table>
+      <a href="/register">Register</a>
+  </table>
+</div>
+</body>
+{% endblock %}
