--- a/mysite/register/templates/register/register.html
+++ b/mysite/register/templates/register/register.html
@@ -16,44 +16,59 @@
         
         .container {
           margin: auto;
-          margin-top: 200px;
+          margin-top: 10%;
           text-align: center;
-          width: 20%;
-          padding: 10px;
-          background-color: #F5EEED;
-          outline: 1px solid lightgray;
+          width: 40%;
+          padding: 1%;
         }
 
         .form-group {
             width: 45%;
-            margin: 0 auto;
-            margin-bottom: 1px;
+            margin: 0% auto;
+            margin-bottom: 1%;
         }
 
         form [type='text'], form [type='password'] {
             display: block;
-            margin-bottom: 3px;
+            margin-bottom: 3%;
         }
 
         .footer {
           margin: auto;
-          margin-top: 12px;
 	      text-align: center;
-          max-width: 20%;
-          padding: 10px;
-          background-color: #F5EEED;
-          outline: 1px solid lightgray;
+          max-width: 40%;
+          padding: 1%;
+        }
+
+        .etu {
+            width: 50%;
+            float: left;
+            padding-right: 1%;
+        }
+
+        .suku {
+            width: 50%;
+            float: left;
+            padding-left: 1%;
         }
         </style>
 </head>
 <div class ="container">
 <h2>Register a new account</h2>
+<h3 style="color: silver;">It's fast and easy!</h3>
 <form method='POST' class='form-group'>
     {% csrf_token %}
     <table>
-        {% for fields in form %}
-        <tr><td>{{fields}}</td></tr>
-        {% endfor %}
+        {{form.username}}
+        {{form.email}}
+        <div class="etu">
+        {{form.first_name}}
+        </div>
+        <div class="suku">
+        {{form.last_name}}
+        </div>
+        {{form.password1}}
+        {{form.password2}}
         <!--{{form.as_table}}-->
         <tr>
             <td>
