Kämänen return / rent parantaa joskus

--- a/mysite/rental_system/templates/rental_system/work.html
+++ b/mysite/rental_system/templates/rental_system/work.html
@@ -7,8 +7,8 @@
     <p>{{ work.publishers.all|join:", "}} {{ work.pub_date }}</p>
     <p>{{ work.desc }}</p>
     {% if user.is_authenticated %}
-    {% if not rented %}
-    <p>Rent</p>
+    {% if not rented.returned %}
+    <a href="{% url 'rent_work' work.id %}">Rent</a>
     {% else %}
     <p>Rented</p>
     {% endif %}
