--- a/mysite/rental_system/templates/rental_system/rented.html
+++ b/mysite/rental_system/templates/rental_system/rented.html
@@ -19,12 +19,14 @@
             </thead>
             <tbody>
                 {% for item in rented %}
+                {% if not item.returned %}
                 <tr>
                     <td>{{ item.rented_work }}</td>
                     <td>{{ item.rent_date }}</td>
                     <td>{{ item.return_date }}</td>
-                    <td><button class="btn btn-primary">Return</button></td>
+                    <td><a href="{% url 'return_work' item.rented_work.id %}">Return</a></td>
                 </tr>
+                {% endif %}
                 {% endfor %}
             </tbody>
         </table>
