--- a/mysite/rental_system/templates/rental_system/index.html
+++ b/mysite/rental_system/templates/rental_system/index.html
@@ -5,9 +5,10 @@
         {% if types %}
         <div class="col-lg-2 col-12">
             <nav id="sidebar">
-                 <!--searchbar-->
-                 <form name="searchform"  onsubmit="return Validate()" method="get">
-                    <input type="text" class="form-control" name="search" id="search" placeholder="Search" minlength="3" autocomplete="off">
+                <!--searchbar-->
+                <form name="searchform" onsubmit="return Validate()" method="get">
+                    <input type="text" class="form-control" name="search" id="search" placeholder="Search" minlength="3"
+                        autocomplete="off">
                 </form>
 
                 <ul class="nav flex-column">
@@ -31,7 +32,7 @@
         {% endif %}
         <!--works-->
         {% if works %}
-            <div class="col-lg-10 col-12">
+        <div class="col-lg-10 col-12 overflow-auto">
             {% for work in works %}
             {% if query in work.title.casefold or query in work.desc or query in work.creators.all|join:", " or query in work.genres.all|join:", "  %}
             <div class="card">
@@ -48,40 +49,57 @@
             {% endif %}
             {% endfor %}
 
-        {% if not query %}
+            {% if not query %}
             <div class="col-10">
-            {% for work in works %}
-            <div class="card">
-                <div class="card-body">
-                    <a href="work/{{ work.id }}">
-                        <h5 class="card-title">{{ work.title }}</h5>
-                    </a>
-                    <p class="card-text"><small class="text-muted">{{ work.genres.all|join:", " }}</small></p>
-                    <p class="card-text"><small class="text-muted">{{ work.creators.all|join:", " }}</small></p>
-                    <p class="card-text">{{ work.desc }}</p>
+                {% for work in works %}
+                <div class="card">
+                    <div class="card-body">
+                        <a href="work/{{ work.id }}">
+                            <h5 class="card-title">{{ work.title }}</h5>
+                        </a>
+                        <p class="card-text"><small class="text-muted">{{ work.genres.all|join:", " }}</small></p>
+                        <p class="card-text"><small class="text-muted">{{ work.creators.all|join:", " }}</small></p>
+                        <p class="card-text">{{ work.desc }}</p>
+                    </div>
                 </div>
+                <br>
+                {% endfor %}
+                {% endif %}
             </div>
-            <br>
-            {% endfor %}
-            {% endif %}
         </div>
+        {% else %}
+        <p>No works are available.</p>
+        {% endif %}
     </div>
-    {% else %}
-    <p>No works are available.</p>
-    {% endif %}
-</div>
-<script>
-    //ghetto, TODO: fix
-    document.getElementById("searchbar").value = "{{query}}"
+    <div class="pagination">
+        <span class="step-links">
+            {% if works.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ works.previous_page_number }}">previous</a>
+            {% endif %}
 
-    function Validate() {
-    var x = document.forms["searchform"]["search"].value;
-    if (x == "") {
-        alert("Fill the form");
-    return false;
-     }
-    } 
+            <span class="current">
+                Page {{ works.number }} of {{ works.paginator.num_pages }}.
+            </span>
+
+            {% if works.has_next %}
+            <a href="?page={{ works.next_page_number }}">next</a>
+            <a href="?page={{ works.paginator.num_pages }}">last &raquo;</a>
+            {% endif %}
+        </span>
+    </div>
+    <script>
+        //ghetto, TODO: fix
+        document.getElementById("searchbar").value = "{{query}}"
+
+        function Validate() {
+            var x = document.forms["searchform"]["search"].value;
+            if (x == "") {
+                alert("Fill the form");
+                return false;
+            }
+        }
 
 
-</script>
-{% endblock %}
+    </script>
+    {% endblock %}
