päivämäärä, lainassa korjauksia
korjattu lainattavien teoksien näkyminen ja lisätty localtime

--- a/mysite/rental_system/templates/rental_system/work.html
+++ b/mysite/rental_system/templates/rental_system/work.html
@@ -7,7 +7,7 @@
     <p>{{ work.publishers.all|join:", "}} {{ work.pub_date }}</p>
     <p>{{ work.desc }}</p>
     {% if user.is_authenticated %}
-    {% if not rented.returned %}
+    {% if not rented %}
     <a href="{% url 'rent_work' work.id %}">Rent</a>
     {% else %}
     <p>Rented</p>
