--- a/mysite/rental_system/templates/rental_system/rented.html
+++ b/mysite/rental_system/templates/rental_system/rented.html
@@ -2,7 +2,6 @@
 {% block content %}
 {% load tz %}
 {% if rented %}
-{% localtime on %}
 <div class="container">
     <div class="table-responsive-lg">
         <br>
@@ -19,12 +18,12 @@
             </thead>
             <tbody>
                 {% for item in rented %}
-                {% if not item.returned %}}
+                {% if not item.returned %}
                 <tr>
                     <td>{{ item.rented_work }}</td>
-                    <td>{{ item.rent_date }}</td>
-                    <td>{{ item.return_date }}</td>
-                    <td><a href="{% url 'return_work' item.rented_work.id %}">Return</a></td>
+                    <td>{{ item.rent_date | localtime }}</td>
+                    <td>{{ item.return_date | localtime }}</td>
+                    <td><a href="{% url 'return_work' item.rented_work.id %}" class="p-2 mb-2 bg-primary text-white">Return</a></td>
                 </tr>
                 {% endif %}
                 {% endfor %}
@@ -32,7 +31,6 @@
         </table>
     </div>
 </div>
-{% endlocaltime %}
 {% else %}
 <tr><td>You haven't rented anything!</td></tr>
 {% endif %}
