Password reset basics
joo

--- a/mysite/rental_system/templates/registration/login.html
+++ b/mysite/rental_system/templates/registration/login.html
@@ -45,6 +45,9 @@
   <table>
       <a href="/register">Register</a>
   </table>
+  <table>
+    <a href="/reset-password">Forgot your password?</a>
+</table>
 </div>
 </body>
 {% endblock %}
