--- a/mysite/rental_system/templates/rental_system/index.html
+++ b/mysite/rental_system/templates/rental_system/index.html
@@ -1,16 +1,55 @@
 {% extends 'base.html' %}
 {% block content %}
+{% load static %}
+<link rel="stylesheet" href="{% static 'mobile.css' %}">
+<link rel="stylesheet" href="{% static 'darkmode.css' %}">
+<!-- call empty tag to apply dark theme-->
+<input type="null" class="custom-control-input" id="DarkTheme">
+
 <div class="container-fluid">
     <div class="row">
         {% if types %}
-        <div class="col-lg-2 col-12">
+        <div class="col-lg-2 col-12"> 
             <nav id="sidebar">
                 <!--searchbar-->       
                 <form name="searchform" method="GET">
                     <input type="text" class="form-control" name="search" id="search" placeholder="Search" minlength="3"
                         autocomplete="off" required>
                 </form>
-             
+                <br> 
+
+
+            <div class="mobile-navbar">
+                <nav class="navbar navbar-light" style="background-color: #eee;">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                    </button>
+                </nav>
+              
+                
+            <div class="collapse" id="navbarToggleExternalContent">
+                <div class="bg-light">        
+                    <ul class="nav flex-column">
+                        {% for type in types %}
+                        <li>
+                            <a href="?search={{ type }}" class="nav-link">{{ type }}</a>
+                        </li>
+                        {% endfor %}
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
+                                aria-haspopup="true" aria-expanded="false">Genres</a>
+                            <div class="dropdown-menu">
+                                {% for genre in genres %}
+                                <a class="dropdown-item" href="?search={{ genre }}">{{ genre }}</a>
+                                {% endfor %}
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            </div>  
+       
+            <div class ="pc">
                 <ul class="nav flex-column">
                     {% for type in types %}
                     <li>
@@ -27,6 +66,7 @@
                         </div>
                     </li>
                 </ul>
+            </div>
             </nav>
         </div>
         {% endif %}
@@ -88,4 +128,6 @@
             {% endif %}
         </span>
     </div>
+
+    <script src="{% static 'darkmode.js' %}"></script>  
     {% endblock %}
