--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -26,6 +26,7 @@
 						aria-haspopup="true" aria-expanded="false">{{ user.username }}</a>
 					<div class="dropdown-menu dropdown-menu-right">
 						<a class="dropdown-item" href="{% url 'rented' %}">Rented Works</a>
+						<a class="dropdown-item" href="{% url 'account' %}">Account</a>
 						<a class="dropdown-item" href="/logout?next={{request.path}}">Logout</a>
 					</div>
 				</li>
