--- a/mysite/rental_system/templates/rental_system/work.html
+++ b/mysite/rental_system/templates/rental_system/work.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
+{% load static %}
+
+<link rel="stylesheet" href="{% static 'darkmode.css' %}">
+<!-- call empty tag to apply dark theme-->
+<input type="null" class="custom-control-input" id="DarkTheme">
+
 <div class="container">
     <h1>{{ work.title }}</h1>
     <p>{{ work.type }}</p>
@@ -31,4 +37,6 @@
     </div>
     {% endif %}
 </div>
+
+<script src="{% static 'darkmode.js' %}"></script>  
 {% endblock %}
