--- a/mysite/rental_system/static/mobile.css
+++ b/mysite/rental_system/static/mobile.css
@@ -1,17 +1,29 @@
 /*mobile.css*/
 
-    @media(max-width:800px) {
-        .pc  {
+@media(max-width:800px) {
+    .pc  {
+    display: none;
+    }
+
+    .mobile-navbar {
+        margin-left: -30px;
+        margin-right: -30px;
+        margin-top: -48px;
+        margin-bottom: 20px;
+    }
+    
+    .searchbar {
         display: none;
-        }
-
-        .mobile-navbar {
-            margin-bottom: 20px;
-        }
     }
 
-    @media(min-width:801px) {
-        .mobile-navbar {
-        display: none;   
-        }
+    .mobile-searchbar {
+        width: 80%;
+        margin: 0 auto;
     }
+}
+
+@media(min-width:801px) {
+    .mobile-navbar {
+    display: none;   
+    }
+}
