--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -27,6 +27,7 @@
 					<div class="dropdown-menu dropdown-menu-right">
 						<a class="dropdown-item" href="{% url 'rented' %}">Rented Works</a>
 						<a class="dropdown-item" href="{% url 'account' %}">Account</a>
+						<div class="dropdown-divider"></div>
 						<a class="dropdown-item" href="/logout?next={{request.path}}">Logout</a>
 					</div>
 				</li>
