--- a/mysite/rental_system/templates/rental_system/rented.html
+++ b/mysite/rental_system/templates/rental_system/rented.html
@@ -2,6 +2,7 @@
 {% block content %}
 {% load static %}
 <link rel="stylesheet" href="{% static 'rented.css' %}">
+<link rel="stylesheet" href="{% static 'darkmode.css' %}">
 {% load tz %}
 {% get_current_timezone as TIME_ZONE %}
 <!-- call empty tag to apply dark theme-->
