--- a/mysite/rental_system/static/mobile.css
+++ b/mysite/rental_system/static/mobile.css
@@ -20,10 +20,122 @@
         width: 80%;
         margin: 0 auto;
     }
+
+    /*login*/
+    .container {
+        margin: auto;
+        margin-top: 200px;
+        text-align: center;
+        padding: 10px;
+      }
+
+    .footer {
+        margin: auto;
+        margin-top: 12px;
+        text-align: center;
+        padding: 10px;
+      }
+
+      /*register*/
+      .container-register {
+        margin: auto;
+        margin-top: 30%;
+        text-align: center;
+        padding: 1%;
+      }
+      
+      .form-group-register {
+  
+        margin: 0% auto;
+        margin-bottom: 1%;
+    }
+
+    form [type='text'], form [type='password'] {
+        display: block;
+        margin-bottom: 3%;
+    }
+
+    .footer-register {
+        margin: auto;
+        text-align: center;
+        padding: 1%;
+      }
+
+    .etu {
+        margin-top: 2%;
+        width: 50%;
+        float: left;
+        padding-right: 1%;
+    }
+
+    .suku {
+        margin-top: 2%;
+        width: 50%;
+        float: left;
+        padding-left: 1%;
+    }
 }
 
 @media(min-width:801px) {
     .mobile-navbar {
     display: none;   
+    }
+
+    /*login*/
+    .container {
+        margin: auto;
+        margin-top: 200px;
+        text-align: center;
+        width: 14%;
+        padding: 10px;
+      }
+
+      .footer {
+        margin: auto;
+        margin-top: 12px;
+        text-align: center;
+        max-width: 20%;
+        padding: 10px;
+      }
+
+      /*register*/
+      .container-register {
+        margin: auto;
+        margin-top: 10%;
+        text-align: center;
+        width: 40%;
+        padding: 1%;
+      }
+
+      .form-group-register {
+        width: 45%;
+        margin: 0% auto;
+        margin-bottom: 1%;
+    }
+
+    form [type='text'], form [type='password'] {
+        display: block;
+        margin-bottom: 3%;
+    }
+
+    .footer-register {
+        margin: auto;
+        text-align: center;
+        max-width: 40%;
+        padding: 1%;
+      }
+
+    .etu {
+        margin-top: 2%;
+        width: 50%;
+        float: left;
+        padding-right: 1%;
+    }
+
+    .suku {
+        margin-top: 2%;
+        width: 50%;
+        float: left;
+        padding-left: 1%;
     }
 }
